...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_img_layout"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/event_details_img"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
...

            <EditText
                android:id="@+id/event_details_title"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
...

            <EditText
                android:id="@+id/event_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_details_title"
                android:layout_marginTop="6dp"
                android:text="@string/description"
                android:textColor="#A9A9A9"
                android:textSize="18sp"
...

            <EditText
                android:id="@+id/event_details_url_edit"
                android:layout_below="@id/event_details_description"
                android:layout_width="180dp"
...

            <EditText
                android:id="@+id/event_details_start"

                android:layout_below="@id/event_details_description"
...

            <EditText
                android:id="@+id/event_details_end"
                android:layout_below="@id/event_details_description"
                android:layout_marginLeft="100dp"
...

            <Spinner
                android:id="@+id/event_type_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Switch
                android:id="@+id/event_public_edit"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
...

            <Switch
                android:id="@+id/event_sos_edit"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
...
        
            <TextView
                android:id="@+id/EditEventOrganizers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <ScrollView
            android:id="@+id/organizers_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/organizers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
...

        <Button
            android:id="@+id/invite_organizer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/EditEventSecurity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_below="@id/EditEventSecurity"
            android:id="@+id/security_scroll">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/security_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </ScrollView>
        <Button
            android:id="@+id/invite_security_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:visibility="gone"/>
        <Button
            android:id="@+id/event_details_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/event_details_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        app:fabSize="normal"
        app:backgroundTint="@color/color2"
        android:id="@+id/event_details_fab"
        android:visibility="gone"
        android:onClick="onEditClicked"/>
...
